--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -125,6 +125,51 @@ print(params_4_pop, n=nrow(params_4_pop))
 write.table(params_4_pop, "params_4_pops.csv", sep=",", quote=F, row.names=F)
 ```
 
+## 5 populations parameters
+
+```{r 5-pops-params, include=TRUE, message=FALSE, warning=FALSE}
+
+mu <- 1e-6
+r <- 1e-6
+N_0 <- 1e+4
+N_1 <- 1e+4
+N_2 <- 1e+4
+N_3 <- 1e+4
+N_4 <- 1e+4
+
+m_01 <- c(1e-4)
+m_02 <- c(1e-4)
+m_03 <- c(1e-4)
+m_04 <- c(1e-4)
+m_10 <- c(1e-4)
+m_12 <- c(1e-4)
+m_13 <- c(0)
+m_14 <- c(1e-4)
+m_20 <- c(1e-4)
+m_21 <- c(0)
+m_23 <- c(0)
+m_24 <- c(1e-4)
+m_30 <- c(1e-4)
+m_31 <- c(1e-4)
+m_32 <- c(1e-4)
+m_34 <- c(0)
+m_40 <- c(1e-4)
+m_41 <- c(1e-4)
+m_42 <- c(1e-4)
+m_43 <- c(0)
+
+params_5_pop <- crossing(mu, r, 
+                         N_0, N_1, N_2, N_3, N_4,
+                         m_01, m_02, m_03, m_04,
+                         m_10, m_12, m_13, m_14,
+                         m_20, m_21, m_23, m_24,
+                         m_30, m_31, m_32, m_34,
+                         m_40, m_41, m_42, m_43) 
+
+print(params_5_pop, n=nrow(params_5_pop))
+write.table(params_5_pop, "params_5_pops.csv", sep=",", quote=F, row.names=F)
+```
+
 # Running moments++
 
 ```{bash run-moments++, engine.opts='-i', include=FALSE}
@@ -181,6 +226,20 @@ id=1 # line counter, scenario_id
     ((id=id+1))
   done 
 } < "$input"
+
+# 5 populations
+input="params_5_pops.csv";
+id=1 # line counter, scenario_id
+
+{
+  read # ignores header 
+  while IFS=, read -r a b c d e f g h i j k l m n o p q r s t u v x w y z last
+  do
+    momentspp params=opt_5.bpp i=$id N0=$c N1=$d N2=$e N3=$f N4=$g m01=$h m02=$i m03=$j m04=$k m10=$l m12=$m m13=$n m14=$o m20=$p m21=$q m23=$r m24=$s m30=$t m31=$u m32=$v m34=$x m40=$w m41=$y m42=$z m43=$last u=$a r=$b
+    ((id=id+1))
+  done 
+} < "$input"
+
 ```
 
 # Running moments.LD
@@ -323,6 +382,60 @@ with open("moments_LD_4_pops_out.csv", "w+") as fout:
         y = moments.LD.LDstats(
             moments.LD.Numerics.steady_state(nus, m, rho=rho, theta=theta),
             num_pops=4,
+        )
+        l = ",".join([str(_) for _ in y[0]] + [str(_) for _ in y[1]]) + "\n"
+        fout.write(l)
+        
+# 5 populations        
+with open("params_5_pops.csv") as fin:
+    params = fin.readlines()
+
+p_names = params[0].strip().split(",")
+
+with open("moments_LD_5_pops_out.csv", "w+") as fout:
+    stats = moments.LD.Util.moment_names(5)
+    l = ",".join(stats[0] + stats[1]) + "\n"
+    fout.write(l)
+    for p_list in params[1:]:
+        p_list = p_list.split(",")
+        u = eval(p_list[p_names.index('mu')])
+        r = eval(p_list[p_names.index('r')])
+        m01 = eval(p_list[p_names.index('m_10')]) # invert ids w.r.t. moments++
+        m02 = eval(p_list[p_names.index('m_20')]) # invert ids w.r.t. moments++
+        m03 = eval(p_list[p_names.index('m_30')]) # invert ids w.r.t. moments++
+        m04 = eval(p_list[p_names.index('m_40')]) # invert ids w.r.t. moments++
+        m10 = eval(p_list[p_names.index('m_01')]) # invert ids w.r.t. moments++
+        m12 = eval(p_list[p_names.index('m_21')]) # invert ids w.r.t. moments++
+        m13 = eval(p_list[p_names.index('m_31')]) # invert ids w.r.t. moments++
+        m14 = eval(p_list[p_names.index('m_41')]) # invert ids w.r.t. moments++
+        m20 = eval(p_list[p_names.index('m_02')]) # invert ids w.r.t. moments++
+        m21 = eval(p_list[p_names.index('m_12')]) # invert ids w.r.t. moments++
+        m23 = eval(p_list[p_names.index('m_32')]) # invert ids w.r.t. moments++
+        m24 = eval(p_list[p_names.index('m_42')]) # invert ids w.r.t. moments++
+        m30 = eval(p_list[p_names.index('m_03')]) # invert ids w.r.t. moments++
+        m31 = eval(p_list[p_names.index('m_13')]) # invert ids w.r.t. moments++
+        m32 = eval(p_list[p_names.index('m_23')]) # invert ids w.r.t. moments++
+        m34 = eval(p_list[p_names.index('m_43')]) # invert ids w.r.t. moments++
+        m40 = eval(p_list[p_names.index('m_04')]) # invert ids w.r.t. moments++
+        m41 = eval(p_list[p_names.index('m_14')]) # invert ids w.r.t. moments++
+        m42 = eval(p_list[p_names.index('m_24')]) # invert ids w.r.t. moments++
+        m43 = eval(p_list[p_names.index('m_34')]) # invert ids w.r.t. moments++
+        N0 = eval(p_list[p_names.index('N_0')])
+        N1 = eval(p_list[p_names.index('N_1')])
+        N2 = eval(p_list[p_names.index('N_2')])
+        N3 = eval(p_list[p_names.index('N_3')])
+        N4 = eval(p_list[p_names.index('N_4')])
+        rho = 4 * N0 * r
+        theta = 4 * N0 * u
+        nus = [N0 / N0, N1 / N0, N2 / N0, N3 / N0, N4 / N0]
+        m = [[0, 2 * N0 * m01, 2 * N0 * m02, 2 * N0 * m03, 2 * N0 * m04],
+             [2 * N0 * m10, 0, 2 * N0 * m12, 2 * N0 * m13, 2 * N0 * m14],
+             [2 * N0 * m20, 2 * N0 * m21, 0, 2 * N0 * m23, 2 * N0 * m24],
+             [2 * N0 * m30, 2 * N0 * m31, 2 * N0 * m32, 0, 2 * N0 * m34],
+             [2 * N0 * m40, 2 * N0 * m41, 2 * N0 * m42, 2 * N0 * m43, 0]]
+        y = moments.LD.LDstats(
+            moments.LD.Numerics.steady_state(nus, m, rho=rho, theta=theta),
+            num_pops=5,
         )
         l = ",".join([str(_) for _ in y[0]] + [str(_) for _ in y[1]]) + "\n"
         fout.write(l)
@@ -962,7 +1075,7 @@ p <- p + theme(axis.title=element_text(size=20),
                  legend.position = "bottom")
 p
 if(save_plots) {
-  ggsave("moments++_4_pops.png", p1, device="png", width=7, height=7)
+  ggsave("moments++_4_pops.png", p1, device="png", width=12, height=12)
 }
 ```
 
@@ -1011,7 +1124,7 @@ p <- p + theme(axis.title=element_text(size=12),
 print(p)
   
 ggsave("expect_moments++_vs_moments.LD_4-pops.png",
-       p, device="png", width=10, height=10)
+       p, device="png", width=12, height=12)
   
 ratio <- filter(full_tbl, method=="moments++") %>% select(common_moments) / 
          filter(full_tbl, method=="moments.LD") %>% select(common_moments) 
@@ -1036,7 +1149,124 @@ p <- p + geom_hline(yintercept=1, linetype="dashed", color = "darkgrey")
 print(p)
 
 ggsave("ratio_moments++_vs_moments.LD_4-pops.png",
-       p, device="png", width=10, height=10)
+       p, device="png", width=12, height=12)
+```
+
+# 5-populations plots
+
+## moments++
+
+```{r 5-population-prep, include=FALSE, message=FALSE, warning=FALSE}
+
+params_5_pops <- read.csv("params_5_pops.csv", header=T, sep=",")
+num_scenarios <- nrow(params_5_pops)
+
+# extracting names of moments
+stats_5_pops <- read.table("5-pops_scenario_1_expectations.txt")[,1]
+num_stats <- length(stats_5_pops)
+
+momspp <- as_tibble(matrix(nrow=num_scenarios, ncol=num_stats), .name_repair="unique")
+names(momspp) <- stats_5_pops
+
+idx=1
+for(i in 1:num_scenarios) {
+  tmp <- read.table(paste("5-pops_scenario_", idx, "_expectations.txt", sep=""))
+  momspp[idx,] <- t(tmp[ncol(tmp)])
+  idx=idx + 1
+}
+
+stats <- bind_cols(momspp, params_5_pops)
+stats$scenario <- 1:nrow(stats)
+write.table(momspp, "moments++_5_pops_stats.csv", sep=",", row.names=F, quote=F)
+
+dat_stats <- pivot_longer(stats, cols=all_of(stats_5_pops), names_to="variable")
+
+p <- ggplot(data=dat_stats, aes(x=variable, y=value, color=as.factor(scenario))) 
+p <- p + geom_point(size=5) + theme_bw()
+p <- p + labs(title="Moments++ expectations", 
+              x="Moment", y="Value", color="scenario")
+p <- p + scale_y_continuous(trans="log10")
+p <- p + theme(axis.title=element_text(size=20),
+                 axis.text=element_text(size=15),
+                 axis.text.x=element_text(angle=90, vjust=0.5, hjust=1),
+                 legend.position = "bottom")
+p
+if(save_plots) {
+  ggsave("moments++_5_pops.png", p1, device="png", width=20, height=20)
+}
+```
+
+## Comparison with moments.LD 
+
+```{r 5-population-LDx++A, include=TRUE, message=FALSE, warning=FALSE}
+
+py_moments <- read.csv("moments_LD_5_pops_out.csv") # out from python chunk 
+
+common_moments <- intersect(names(momspp), names(py_moments))
+match_moments <- bind_rows(select(momspp, all_of(common_moments)),
+                           select(py_moments, all_of(common_moments)))
+match_moments$scenario <- rep(seq(1:num_scenarios), 2)
+match_moments$method <- c(rep("moments++", num_scenarios),
+                          rep("moments.LD", num_scenarios))
+full_tbl <- bind_cols(match_moments, 
+                      bind_rows(params_5_pop, params_5_pop)) 
+
+# following lines help visualization in raw table
+full_tbl$sep_moments <- paste(full_tbl$scenario, full_tbl$method, sep="_")
+
+dat_matched <- pivot_longer(full_tbl,
+                            cols=all_of(common_moments),
+                            names_to="variable") 
+
+dat_matched$matched_moments <- paste(dat_matched$variable, 
+                                     dat_matched$sep_moments, 
+                                     sep="_")
+
+dat_matched <- arrange(dat_matched, scenario, matched_moments)
+dat_matched <- select(dat_matched, -c(sep_moments, matched_moments))
+
+write.table(dat_matched, "LD_++_5-pops.csv", sep=",", row.names=F, quote=F)
+
+p <- ggplot(data=dat_matched,
+            aes(x=variable, y=value, shape=method, color=as.factor(scenario))) 
+p <- p + geom_point(size=2) + theme_bw()
+p <- p + scale_y_continuous(trans="log10")
+p <- p + scale_shape_manual(values=c(1, 2))
+p <- p + labs(title = "Expectations",
+              x="Moment", y="Value", shape="Method", color="Scenario")
+p <- p + theme(axis.title=element_text(size=12),
+               axis.text=element_text(size=10),
+               axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+               legend.position="bottom")
+print(p)
+  
+ggsave("expect_moments++_vs_moments.LD_5-pops.png",
+       p, device="png", width=20, height=20)
+  
+ratio <- filter(full_tbl, method=="moments++") %>% select(common_moments) / 
+         filter(full_tbl, method=="moments.LD") %>% select(common_moments) 
+
+ratio_tbl <- bind_cols(ratio,
+                       select(filter(full_tbl, method=="moments++"),
+                              -common_moments)) %>% select(-c("method",
+                                                              "sep_moments"))
+
+dat_ratio <- pivot_longer(ratio_tbl, cols=all_of(common_moments), names_to="variable")
+
+p <- ggplot(data=dat_ratio,
+            aes(x=variable, y=value, color=as.factor(scenario))) 
+p <- p + geom_point(size=1) + theme_bw()
+p <- p + labs(title = "Ratio ++/LD",
+              x="Moment", y="Value", color="Scenario")
+p <- p + theme(axis.title=element_text(size=12),
+               axis.text=element_text(size=10),
+               axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+               legend.position="bottom")
+p <- p + geom_hline(yintercept=1, linetype="dashed", color = "darkgrey")
+print(p)
+
+ggsave("ratio_moments++_vs_moments.LD_5-pops.png",
+       p, device="png", width=20, height=20)
 ```
 
 # Test Mats
