--- a/tools/benchmarking.Rmd
+++ b/tools/benchmarking.Rmd
@@ -35,7 +35,7 @@ for((i=1;i<=6;++i)); do demesdraw tubes model_$i.yaml model_$i.pdf; done
 
 # Running moments++
 
-```{bash run-moments++, engine.opts='-i', include=TRUE}
+```{bash run-moments++, engine.opts='-i', include=FALSE, eval=TRUE}
 
 source ~/.bashrc
 
@@ -127,11 +127,11 @@ with open("moments_LD_model_6.csv", "w+") as fout:
     fout.write(l)
 ```
 
-# plots
+# Plots
 
-```{r plots, include=TRUE, eval=FALSE}
+```{r plots, include=TRUE, eval=TRUE}
 
-# 3-populations (models 1-4)
+# 3-populations (models m1-m4)
 mpp_m1 <- read.table("model_1_expectations.txt") %>% select(!V2)
 mpp_m2 <- read.table("model_2_expectations.txt") %>% select(V3)
 mpp_m3 <- read.table("model_3_expectations.txt") %>% select(V3)
@@ -139,7 +139,7 @@ mpp_m4 <- read.table("model_4_expectations.txt") %>% select(V3)
 
 momspp <- bind_cols(mpp_m1, mpp_m2, mpp_m3, mpp_m4)
 names(momspp) <- c("stat", "m1++", "m2++", "m3++", "m4++")
-momspp <- momspp[-31,]
+momspp <- momspp[-31,] # deletes dummy moment I
 momspp <- slice(momspp, 1:24, 31:52, 25:30) # re-orders rows to match moments.LD
 
 py_m1 <- read.csv("moments_LD_model_1.csv") 
@@ -149,46 +149,56 @@ py_m4 <- read.csv("moments_LD_model_4.csv")
 
 py_moms <- as_tibble(cbind(names(py_m1), t(bind_rows(py_m1, py_m2, py_m3, py_m4))))
 names(py_moms) <- c("stat", "m1py", "m2py", "m3py", "m4py")
+py_moms <- type_convert(py_moms)
 
-models <- bind_cols(momspp[,1:3], py_moms[,2:3])
-models <- head(models, - 6)
-names(models) <- c("stat", "admix++", "no-admix++", "admix_py", "no-admix_py")
-models$ratio_admix <- models$`admix++` / models$admix_py
-models$ratio_no_admix <- models$`no-admix++` / models$`no-admix_py`
+ratios <- select(momspp, starts_with("m")) / select(py_moms, starts_with("m"))
+ratios <- bind_cols(momspp$stat, ratios)
+names(ratios) <- c("stat", "m1", "m2", "m3", "m4")
 
-molten_admix <- pivot_longer(models, cols=starts_with("admix"))
-r <- ggplot(data=molten_admix, aes(x=stat, y=value, shape=name))
-r <- r + geom_point(size=3) + theme_bw()
-r <- r + labs(title="++ vs LD (pulse)", x="Moment", y="Value", shape="model")
-r <- r + scale_shape_manual(values=c(1, 2))
-r <- r + theme(axis.title=element_text(size=12),
-               axis.text=element_text(size=10),
-               axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
-               legend.position="bottom")
+molten_ratios <- pivot_longer(ratios, cols=starts_with("m"))
+p1 <- ggplot(data=molten_ratios, aes(x=stat, y=value, shape=name))
+p1 <- p1 + geom_point(size=3) + theme_bw()
+p1 <- p1 + labs(title="++ / LD", x="Moment", y="Ratio", shape="Model")
+p1 <- p1 + scale_shape_manual(values=c(0, 1, 2, 3))
+p1 <- p1 + theme(axis.title=element_text(size=12),
+                 axis.text=element_text(size=10),
+                 axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
 
-molten_no_admix <- pivot_longer(models, cols=starts_with("no-admix"))
-s <- ggplot(data=molten_no_admix, aes(x=stat, y=value, shape=name))
-s <- s + geom_point(size=3) + theme_bw()
-s <- s + labs(title="++ vs LD (no-pulse)", x="Moment", y="Value", shape="model")
-s <- s + scale_shape_manual(values=c(1, 2))
-s <- s + theme(axis.title=element_text(size=12),
-               axis.text=element_text(size=10),
-               axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
-               legend.position="bottom")
+p1
+save_plot("ratios_1-4.pdf", p1, base_height=12, base_width=12)
 
-plot <- plot_grid(r, s, ncol = 2)
-plot
+# 4-populations (models m5-m6)
+mpp_m5 <- read.table("model_5_expectations.txt") %>% select(!V2)
+mpp_m6 <- read.table("model_6_expectations.txt") %>% select(V3)
 
-molten_ratios <- pivot_longer(models, cols=starts_with("ratio"))
-t <- ggplot(data=molten_ratios, aes(x=stat, y=value, shape=name))
-t <- t + geom_point(size=3) + theme_bw()
-t <- t + labs(title="++ / LD", x="Moment", y="Value", shape="model")
-t <- t + scale_shape_manual(values=c(1, 2))
-t <- t + theme(axis.title=element_text(size=12),
-               axis.text=element_text(size=10),
-               axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
-               legend.position="bottom")
-t
-save_plot("ratios.pdf", t, base_height=12, base_width=12)
+momspp <- bind_cols(mpp_m5, mpp_m6)
+names(momspp) <- c("stat", "m5++", "m6++")
+momspp <- momspp[-61,] # deletes dummy moment I
+momspp <- slice(momspp, 1:50, 61:115, 51:60) # re-orders rows to match moments.LD
+
+py_m5 <- read.csv("moments_LD_model_5.csv") 
+py_m6 <- read.csv("moments_LD_model_6.csv") 
+
+py_moms <- as_tibble(cbind(names(py_m5), t(bind_rows(py_m5, py_m6))))
+names(py_moms) <- c("stat", "m5py", "m6py")
+py_moms <- type_convert(py_moms)
+
+ratios <- select(momspp, starts_with("m")) / select(py_moms, starts_with("m"))
+ratios <- bind_cols(momspp$stat, ratios)
+names(ratios) <- c("stat", "m5", "m6")
+
+molten_ratios <- pivot_longer(ratios, cols=starts_with("m"))
+p2 <- ggplot(data=molten_ratios, aes(x=stat, y=value, shape=name))
+p2 <- p2 + geom_point(size=3) + theme_bw()
+p2 <- p2 + labs(title="++ / LD", x="Moment", y="Ratio", shape="Model")
+p2 <- p2 + scale_shape_manual(values=c(0, 1))
+p2 <- p2 + theme(axis.title=element_text(size=12),
+                 axis.text=element_text(size=10),
+                 axis.text.x=element_text(angle=90, size=8, vjust=0.5, hjust=1.0),
+                 legend.position="bottom")
+
+p2
+save_plot("ratios_5-6.pdf", p2, base_height=12, base_width=12)
 
 ```
